fix: update line-height for improved readability

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
 html {
     height: 100%;
     font-size: 18px;
-    line-height: 1;
+    line-height: 1.4;
     scroll-behavior: smooth;
     animation: fadeInAnimation 1s;
     animation-timing-function: ease-out;
